# Vinyl-view

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: auth.rs  logger.rs  main.rs  models.rs  routes.rs  token.rs
frontend/: main.js  package-lock.json  package.json
frontend/renderer/: app.js  index.html  style.css
renderer/: app.js  index.HTML  style.css
