[package]
name = "backend"
version = "2.6.7"
edition = "2024"

[dependencies]
rspotify = { version = "0.12.0", features = ["env-file", "cli"] }
tokio = { version = "1", features = ["full", "fs"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = "0.4.42"
lazy_static = "1.5.0"